--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,13 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@components/*": [
+        "app/components/*"
+      ],
+      "@styles/*": [
+        "app/styles/*"
+      ]
     }
   }
 }
